<?xml version="1.0"?>
<package format="3">
  <name>edubot_navigation</name>
  <version>0.0.1</version>
  <description>
    The edubot_navigation package provides ROS 2 launch scripts and configuration
    files for starting the navigation stack on the EduBot platform.
  </description>

  <maintainer email="info@vectoral.ch">Vectoral</maintainer>
  <author>Stefan Siegler</author>
  <license>Proprietary</license>

  <url type="repository">https://github.com/vectoral-robotics/edubot_navigation</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
